--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,35 @@
 body{
-    background: #d2d2c1 url(img/fundo.png) no-repeat;
+    background: #d2d2c1 url(img/fundo.png);
     font-size: 16px Arial, Helvetica, sans-serif;
+}
+#principal{
+    
+    width: 900px;
+    
+}
+
+#menu{
+    background: #c5c5b2;
+
+    padding: 18px;
+}
+#conteudo{
+    background: #e8e8d9;
+    padding: 10px;
+}
+
+a {
+color: #4b566a;
+text-decoration: none;
+font-weight: bold;
+
+padding: 5px;
+}
+
+
+.centralizar{
+    text-align: center;
+}
+.img-campanha{
+    border: 10px solid #c3c3ae;
 }
